# max-bot-api-client-rust

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: bot.rs  error.rs  lib.rs  responses.rs
src/sync/: client.rs  error.rs  mod.rs
