[package]
name = "max_bot_api_client"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"

[lib]
path = "src/lib.rs"

[features]
default = ["async"]
async = ["reqwest", "tokio"]
sync = ["ureq"]

[dependencies]
reqwest = { version = "0.12.22", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.46.0", optional = true }
ureq = { version = "3.0.12", optional = true, features = ["json"] }

[dev-dependencies]
once_cell = "1.21.3"
